#40 - Changes to POM for integration with Sonatype OSS and try and reference Coherence from local repository.  Commented out all integration tests to make the cycle of experimenting with release to OSS quicker.