@@ -7,13 +7,11 @@
     <packaging>jar</packaging>
     <version>2.4.6-SNAPSHOT</version>
 
-<!--
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>7</version>
     </parent>
--->
 
     <name>${project.artifactId}</name>
     <description>LittleGrid Coherence test-support framework</description>
@@ -37,6 +35,7 @@
     <developers>
         <developer>
             <name>Jonathan Hall</name>
+            <email>jon@littlegrid.org</email>
         </developer>
     </developers>
 
@@ -181,76 +180,6 @@
                 </plugins>
             </build>
         </profile>
-
-        <profile>
-            <id>customArgLineToBeUsed</id>
-            <activation>
-                <property>
-                    <name>argLine</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${maven-surefire-plugin.version}</version>
-                        <configuration>
-                            <forkMode>always</forkMode>
-                            <!--
-                                If using this custom argLine profile (typically to support command-line override),
-                                then in additional to your own user specified settings you should also include
-                                those from the default profile as sensible memory defaults.
-                            -->
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-<!--
-        <profile>
-            <id>release-sign-artifacts</id>
-            <activation>
-                <property>
-                    <name>performRelease</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${maven-surefire-plugin.version}</version>
-                        <configuration>
-                            &lt;!&ndash;
-                                Due to the classes being loaded into different class loaders and coupled with
-                                the fact that these tests are all about testing that behaviour, the forking and
-                                below argLine settings are used to avoid the perm-space from becoming full.
-                            &ndash;&gt;
-                            <forkMode>always</forkMode>
-                            <argLine>-Xmx768m -Xms768m -XX:MaxPermSize=512m</argLine>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>${maven-gpg-plugin.version}</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
--->
     </profiles>
 
     <!--
@@ -265,19 +194,6 @@
             <url>http://192.168.1.151:8081/nexus/content/repositories/thirdparty</url>
         </repository>
     </repositories>
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <name>Sonatype Nexus Snapshots</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>sonatype-nexus-staging</id>
-            <name>Nexus Release Repository</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
 
     <properties>
         <java.target.version>1.6</java.target.version>
